--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
 			<version>4.3.2.RELEASE</version>
 		</dependency>
 		<dependency>
-    		<groupId>org.springframework.security</groupId>
-   			<artifactId>spring-security-core</artifactId>
-   			<version>4.1.2.RELEASE</version>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>4.1.2.RELEASE</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
@@ -97,6 +97,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.21</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
